--- a/timeline.css
+++ b/timeline.css
@@ -28,15 +28,15 @@
 .v-line {
     position: absolute;
     width: 5px;
-    height: 1530px;
+    height: 1280px;
     background-color: rgb(58, 57, 57);
-    top: 155.5%; 
+    top: 136.5%; 
     left: 50%;
     transform: translate(-50%, -50%);
 }
 
 
-.h-line, .h-line2, .h-line3, .h-line4, .h-line5, .h-line6, .h-line7 {
+.h-line, .h-line2, .h-line3, .h-line4, .h-line5, .h-line6 {
     position: absolute;
     width: 40px;
     height: 5px;
@@ -80,104 +80,249 @@
     transform: translate(-50%, -50%);
 }
 
-.h-line7 {
-    top: 271%; 
-    left: 48.5%;
-    transform: translate(-50%, -50%);
-}
 
   /* body */
 
 body {
     margin: 0;
     padding: 0;
-    background: #f4f4f4;
+    background: #f1f1f1;
+  background-image: linear-gradient(
+      90deg,
+      transparent 50px,
+      #ffb4b8 50px,
+      #ffb4b8 52px,
+      transparent 52px
+    ),
+    linear-gradient(#e1e1e1 0.1em, transparent 0.1em);
+  background-size: 100% 30px;
     height: 100vh;
     width: 100vw;
-
 }
 
+.container {
+    display: flex;
+    justify-content:center;
+    text-align: center;
+    align-items: center ;
+    background-color: transparent;
+    width: 100%;
+    height: 150px;
+}
 
 .word {
-    width: 100%;
-    height: auto;
     font-size: 2rem;
     color: #333;
     font-family: barrio;
-    text-align: center;
     text-shadow: 2px 8px 4px rgba(0, 0, 0, 0.5);
-    display: flex;
-    justify-content:center;
+    
 }
+
+span {
+    position: relative;
+    display: inline-block;
+    animation: falling 0.5s ease-in-out alternate ;
+}
+
+@keyframes falling {
+    0% {
+        top: -100px;
+        color: #333;
+    }
+    100% {
+        top: 0; 
+        color: #fbc638;
+    }
+}
+
+h1 span:nth-child(1) {
+    animation-delay: 0.6s;
+    animation-timing-function: ease-in-out;
+  }
+  
+  h1 span:nth-child(2) {
+      animation-delay: 0.7s;
+      animation-timing-function: ease-in-out;
+  }
+  
+  h1 span:nth-child(3) {
+      animation-delay: 0.8s;
+      animation-timing-function: ease-in-out;
+  }
+  
+  h1 span:nth-child(4) {
+      animation-delay: 0.9s;
+      animation-timing-function: ease-in-out;
+  }
+  
+  h1 span:nth-child(5) {
+      animation-delay: 1s;
+      animation-timing-function: ease-in-out;
+  }
+  
+  h1 span:nth-child(6) {
+      animation-delay: 1.1s;
+      animation-timing-function: ease-in-out;
+  }
+  
+  h1 span:nth-child(7) {
+      animation-delay: 1.2s;
+      animation-timing-function: ease-in-out;
+  }
+  
+  h1 span:nth-child(8) {
+      animation-delay: 1.3s;
+      animation-timing-function: ease-in-out;
+  }
+  
+  h1 span:nth-child(9) {
+      animation-delay: 1.4s;
+      animation-timing-function: ease-in-out;
+  }
+  
+  h1 span:nth-child(10) {
+      animation-delay: 1.5s;
+      animation-timing-function: ease-in-out;
+  }
+  
+  h1 span:nth-child(11) {
+      animation-delay: 1.6s;
+      animation-timing-function: ease-in-out;
+  }
+  
+  h1 span:nth-child(12) {
+      animation-delay: 1.7s;
+      animation-timing-function: ease-in-out;
+  }
+  
+  h1 span:nth-child(13) {
+      animation-delay: 1.8s;
+      animation-timing-function: ease-in-out;
+  }
+
 
 .event-container {
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
-    background-color: blue;
+    background-color: transparent;
     width: 100vw;
     height: 100vh;
-    gap: 20px;
+    gap:30px;
 }
 
 
-.event, .event2, .event3, .event4, .event5, .event6, .event7 {
+.event, .event2, .event3, .event4, .event5, .event6 {
     display: flex;
     flex-direction: row;
     justify-content: flex-start;
-    background-color: green;
+    background-color: transparent;
     width: 100%;
     height: 35%;
 }
 
-.text, .text3, .text5, .text7 {
-    background-color: grey;
+.text, .text3, .text5 {
+    background-color: transparent;
     font-family: atma;
     width: 40%;
     height: 90%;
     margin-left: 10px;
     border-radius: 10px;
-    padding: 10px;
+    padding: 15px;
+    background: rgba(235, 229, 229, 0.28);
+    border-radius: 16px;
+    box-shadow: 0 2px 5px #fbc638;
+    backdrop-filter: blur(2.1px);
+    -webkit-backdrop-filter: blur(2.1px);
+    border: 1px solid #0800006e;
 
 }
 
 
-.picture, .picture3, .picture5, .picture7 {
-    background-color: red;
+.picture, .picture3, .picture5 {
     width: 40%;
     height: 90%;
     border-radius: 10px;
     margin-left: auto;
     margin-right: 10px;
     padding: 10px;
+    border-radius: 16px;
+    box-shadow: 0 4px 40px rgba(0, 0, 0, 0.205);
+    backdrop-filter: blur(2.1px);
+    -webkit-backdrop-filter: blur(2.1px);
+    border: 1px solid #0800006e;
 
 }
 
 .picture2, .picture4, .picture6 {
-    background-color: grey;
     width: 40%;
     height: 90%;
     border-radius: 10px;
     margin-right: auto;
     margin-left: 10px;
     padding: 10px;
+    border-radius: 16px;
+    box-shadow: 0 4px 40px rgba(85, 81, 30, 0.205);
+    backdrop-filter: blur(2.1px);
+    -webkit-backdrop-filter: blur(2.1px);
+    border: 1px solid #0800006e;
+
+    
+
 }    
 
 .text2, .text4, .text6 {
-    background-color: grey;
+    background-color: transparent;
     font-family: atma;
     width: 40%;
     height: 90%;
     margin-right: 10px;
     border-radius: 10px;
-    padding: 10px;
+    padding: 15px;
+    background: rgba(235, 229, 229, 0.28);
+    border-radius: 16px;
+    box-shadow: 0 2px 5px #fbc638;
+    backdrop-filter: blur(2.1px);
+    -webkit-backdrop-filter: blur(2.1px);
+    border: 1px solid #0800006e;
     
 }
 
-.picture img, .picture2 img, .picture3 img, .picture4 img, .picture5 img, .picture6 img, .picture7 img {
-    border-radius: 10px;
+.picture img, .picture2 img, .picture3 img, .picture4 img, .picture5 img, .picture6 img {
+    left: 0;
+    top: 0;
     width: 100%;
     height: 100%;
-    aspect-ratio: 3/2;
     object-fit: cover;
+    border-radius: 10px;
+}
+
+.picture img {
+    object-position: 50% 70%;
+    
+}
+
+.picture4 img {
+    object-position: 50% 65%;
+}
+
+.picture5 img {
+    object-position: 50% 80%;
+}
+
+.event, .event2, .event3, .event4, .event5, .event6 {
+    animation: appear linear;
+    animation-timeline: view();
+    animation-range: entry 0% cover 25%;
+}
+
+@keyframes appear {
+    0% {
+        opacity: 0;
+        clip-path: inset(100% 100% 0 0);
+    }
+    100% {
+        opacity: 1;
+        clip-path: inset(0 0 0 0);
+    }
 }
