--- a/timeline.css
+++ b/timeline.css
@@ -115,8 +115,38 @@ body {
     color: #333;
     font-family: barrio;
     text-shadow: 2px 8px 4px rgba(0, 0, 0, 0.5);
+    margin-left: 5px;
     
 }
+
+.navbar {
+    background-color: #fbc638;
+    border: #333 solid 2px;
+    display: flex;
+    text-decoration: none;
+    width: 100%;
+    height: 150px;
+    margin-bottom: 20px;
+    justify-content: start;
+    align-items: center;
+}
+
+a {
+   text-decoration: none;
+   color: #333; 
+   background-color: #f1f1f1;
+   padding: 1em;
+   margin: 1em;
+   border-radius: 5px;
+   border: #333 solid 1px;
+}
+
+.links {
+    margin-left: 500px;
+}
+
+
+
 
 span {
     position: relative;
@@ -326,3 +356,4 @@ h1 span:nth-child(1) {
         clip-path: inset(0 0 0 0);
     }
 }
+
